Fix mobile menu icon and layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,9 @@ img {
     cursor: pointer;
 }
 
-.mobile-menu-close svg {
+.mobile-menu-close-icon {
+    width: 8px;
+    height: 8px;
     fill: #2e2f42;
 }
 .mobile-nav {
@@ -191,8 +193,7 @@ img {
 .mobile-nav-list {
     display: flex;
     flex-direction: column;
-    gap: 32px;
-
+    gap: 40px;
     width: 151px;
 }
 
@@ -232,7 +233,7 @@ img {
 }
 
 .mobile-email {
-    font-size: 16px;
+    font-size: 20px;
     line-height: 1.5;
     color: #434455;
 }
@@ -315,7 +316,7 @@ img {
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-max-width: 288px;
+max-width: 216px;
 margin: 0 auto 72px;
 text-shadow: 
 -1px -1px 0 #000,
@@ -376,7 +377,7 @@ text-shadow:
 }
 
 .features-icon {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -441,7 +442,8 @@ text-shadow:
     gap: 72px;
 }
 .team-item {
-    width: 100%;
+    width: 264px;
+    margin: 0 auto;
     background-color: #fff;
     border-radius: 0 0 4px 4px;
     box-shadow:
@@ -638,7 +640,7 @@ margin-bottom: 72px;
 .footer-top {
     display: flex;
     flex-direction: column;
-    gap: 48px;
+    gap: 72px;
     text-align: center;
 }
 
@@ -1180,6 +1182,7 @@ display: inline;
              display: flex;
              flex-direction: column;
              align-items: flex-start;
+             margin-left: auto;
          }
     
          .footer-subscribe-form {
@@ -1276,6 +1279,9 @@ display: inline;
              line-height: 1.2;
              text-align: left;
          }
+ .features-icon {
+     display: flex;
+ }
     
          .features-text {
              font-weight: 400;
